--- a/crash.html
+++ b/crash.html
@@ -100,7 +100,7 @@
                         </svg>              
                       </div>
                     </div>
-                    <p class="sidebar__inner-comment">Limits far yet turned highly repair parish talked six. Draw fond rank form nor the day eat. Draw fond rank form nor the day</p>
+                    <p class="sidebar__inner-comment">Limits far yet turned highly repair  talked six. Draw fond rank form nor the day eat. Draw fond rank form nor the day</p>
                     <p class="sidebar__inner-time">1:16</p>             
                   </div>          
                 </div>
@@ -121,7 +121,7 @@
                         </svg>              
                       </div>
                     </div>
-                    <p class="sidebar__inner-comment">Limits far yet turned highly repair parish talked six. Draw fond rank form nor the day eat. Draw fond rank form nor the day</p>
+                    <p class="sidebar__inner-comment">Limits far yet turned highly repair  talked six. Draw fond rank form nor the day eat. Draw fond rank form nor the day</p>
                     <p class="sidebar__inner-time">1:16</p>             
                   </div>          
                 </div>
@@ -142,7 +142,7 @@
                         </svg>              
                       </div>
                     </div>
-                    <p class="sidebar__inner-comment">Limits far yet turned highly repair parish talked six. Draw fond rank form nor the day eat. Draw fond rank form nor the day</p>
+                    <p class="sidebar__inner-comment">Limits far yet turned highly repair  talked six. Draw fond rank form nor the day eat. Draw fond rank form nor the day</p>
                     <p class="sidebar__inner-time">1:16</p>             
                   </div>          
                 </div>
@@ -163,7 +163,28 @@
                         </svg>              
                       </div>
                     </div>
-                    <p class="sidebar__inner-comment">Limits far yet turned highly repair parish talked six. Draw fond rank form nor the day eat. Draw fond rank form nor the day</p>
+                    <p class="sidebar__inner-comment">3Limits  yet turned highly repair  talked six. Draw fond rank form nor the day eat. Draw fond rank form nor the day</p>
+                    <p class="sidebar__inner-time">1:16</p>             
+                  </div>          
+                </div>
+              </li>
+              <li>
+                <div class="sidebar__inner">
+                  <div class="sidebar__inner-image">
+                    <img src="assets/images/icon-acaunt.png" alt="">
+                  </div>
+                  <div class="sidebar__inner-info">
+                    <div class="sidebar__inner-name">
+                      Midix
+                      <div  class="circle">
+                        <span>11</span>
+                        <svg class="level" width="36" height="36">        
+                          <circle class="level-cirlce-2" stroke="#0C122D" stroke-width="2.5" cx="16" cy="16" r="11" fill="transparent"/>
+                          <circle class="level-cirlce" stroke="#61FF00" stroke-width="2.5" cx="16" cy="16" r="11" fill="transparent" />      
+                        </svg>              
+                      </div>
+                    </div>
+                    <p class="sidebar__inner-comment">132Limits far yet  highly repair  talked six. Draw fond rank form nor the day eat. Draw fond rank form nor the day</p>
                     <p class="sidebar__inner-time">1:16</p>             
                   </div>          
                 </div>
@@ -272,7 +293,7 @@
             </div>
           </div>
         </div>         
-        <main class="main">
+        <main class="main-base">
             
             <div class="crash">
               <div class="crash__rates">
